# linear_algebra

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: basic.cpp
include/linear_algebra/: matrix.hpp  vector.hpp
